// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General Creators .loadLocationForUsername creates GET_LOCATION_START and GET_LOCATION actions when dispatching 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "started",
    },
    "type": "GET_LOCATION_START",
  },
  Object {
    "payload": Object {
      "location": "Tallinn, Estonia",
      "status": "ready",
    },
    "type": "GET_LOCATION",
  },
]
`;

exports[`General Creators .loadLocationStart should return action with a type of GET_LOCATION_START 1`] = `
Object {
  "payload": Object {
    "status": "started",
  },
  "type": "GET_LOCATION_START",
}
`;

exports[`General Creators .ping should return action with a type of PING 1`] = `
Object {
  "payload": Object {
    "payload": Object {
      "data": 2,
    },
  },
  "type": "PING",
}
`;

exports[`General Creators .setStartedWorkout should return action with a type of WORKOUT_STATUS 1`] = `
Object {
  "payload": Object {
    "name": "Pull-up",
    "reps": 12,
    "restTime": 60,
    "results": Array [],
    "sets": 5,
    "setsLeft": 5,
    "status": "started",
    "weight": 10,
  },
  "type": "WORKOUT_STATUS",
}
`;

exports[`General Creators .startWorkout should return action with a type of WORKOUT_STATUS 1`] = `
Object {
  "payload": Object {
    "status": "starting",
  },
  "type": "WORKOUT_STATUS",
}
`;

exports[`General Creators .startWorkoutWithCountdown creates 2 WORKOUT_STATUS actions when dispatching 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "starting",
    },
    "type": "WORKOUT_STATUS",
  },
  Object {
    "payload": Object {
      "name": "Pull-up",
      "reps": 12,
      "restTime": 60,
      "results": Array [],
      "sets": 5,
      "setsLeft": 5,
      "status": "started",
      "weight": 10,
    },
    "type": "WORKOUT_STATUS",
  },
]
`;
